--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ p {
 .projects,
 .competencies,
 .services {
-  padding-top: 150px;
+  margin-top: 150px;
 }
 
 .header {
@@ -102,7 +102,7 @@ h2 {
 }
 
 .projects__title {
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .project {
@@ -132,7 +132,7 @@ h2 {
 }
 
 .project-list {
-  padding-bottom: 80px;
+  margin-bottom: 80px;
 }
 
 .project-btn {
@@ -160,7 +160,7 @@ h2 {
 }
 
 .competention {
-  padding-bottom: 60px;
+  margin-bottom: 60px;
 }
 
 .competention__image {
@@ -178,7 +178,7 @@ h2 {
   color: #00f6ff;
 }
 
-.competention__desc {
+.competention__description {
   padding-right: 499px;
   width: 1150px;
   font-size: 22px;
@@ -188,7 +188,7 @@ h2 {
 }
 
 .services__title {
-  padding-bottom: 74px;
+  margin-bottom: 74px;
   width: 403px;
   font-size: 35px;
   line-height: 46px;
@@ -197,10 +197,10 @@ h2 {
 }
 
 .service {
-  padding-bottom: 74px;
+  margin-bottom: 74px;
 }
 
-.service__background {
+.service-description__wrapper {
   padding: 40px;
   height: 283px;
   background-color: #191c19;
@@ -208,7 +208,7 @@ h2 {
 }
 
 .service__title {
-  padding-bottom: 15px;
+  margin-bottom: 15px;
   font-size: 55px;
   line-height: 72px;
 
@@ -231,24 +231,17 @@ h2 {
   border-radius: 30px;
 }
 
-.contatcs__text-wrapper {
-  padding-top: 320px;
-  display: block;
-}
-
 .contacts__title {
+  padding-top: 320px;
   margin-bottom: 28px;
   color: #fff;
   font-size: 35px;
   line-height: 60px;
 }
 
-.contacts__link-wrapper {
-  margin-bottom: 20px;
-}
-
 .contacts__link {
   margin-bottom: 20px;
+  display: block;
   font-size: 60px;
   line-height: 60px;
   text-decoration: none;
