--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,6 +1,6 @@
 .contacts {
     height: 717px;
-    background-image: url(../resources/contacts-fullWidthImg.png);
+    background-image: url(../resources/contacts-image.png);
     background-repeat: no-repeat;
     background-position: right;
     background-color: #191c19;
@@ -22,6 +22,7 @@
 
   .input {
     margin-bottom: 26px;
+    padding-left: 20px;
     display: block;
     width: 567px;
     height: 60px;
@@ -49,7 +50,7 @@
   @media (max-width: 1199px) {
     .contacts {
       margin-top: 110px;
-      background-image: url(../resources/contacts-fullWidthImg_tablet.png);
+      background-image: url(../resources/contacts-image_tablet.png);
       height: 484px;
     }
 
@@ -82,5 +83,8 @@
   }
 
   @media (max-width: 767px) {
+    .contacts {
+      background-image: none;
 
+    }
   }
