--- a/styles/header.css
+++ b/styles/header.css
@@ -1,4 +1,5 @@
 .header {
+    width: 100%;
     height: 765px;
     background-image: url(../resources/portfolio-bg1.png);
     background-repeat: no-repeat;
@@ -18,7 +19,7 @@
     font-size: 43px;
     letter-spacing: -0.11em;
     background: #000000;
-    padding: 9px;
+    padding: 9px 18px;
     border-radius: 45px;
     text-decoration: none;
     color: #00f6ff;
@@ -44,11 +45,29 @@
   }
 
   @media (max-width: 1199px) {
+
+  .nav {
+  display: none;
+  }
+
     .logo {
       margin-top: 23px;
+      font-size: 30px;
       }
   }
 
-  @media (max-width: 767px) {
 
+  @media (max-width: 767px) {
+    .header {
+      height: 716px;
+      background-image: url(../resources/portfolio-bg1.png);
+      background-size: cover;
+      background-position: center;
+      object-fit: contain;
+    }
+
+    .logo {
+      margin-top: 23px;
+      font-size: 25px;
+    }
   }
