--- a/styles/projects.css
+++ b/styles/projects.css
@@ -113,5 +113,38 @@
   }
 
   @media (max-width: 767px) {
+    .projects__title {
+      margin-bottom: 34px;
+    }
 
+    .project-list {
+      margin-bottom: 60px;
+    }
+
+    .project__text {
+      top: 30px;
+      left: 33px;
+      padding: 6px 19px;
+      border-radius: 65px;
+      font-size: 13px;
+    }
+
+    .project__title {
+      left: 35px;
+    }
+
+    .project__description {
+      left: 35px;
+      bottom: 50px;
+      font-size: 16px;
+    }
+
+    .project-btn {
+      padding-top: 28px;
+      width: 100%;
+      height: 80px;
+      font-size: 18px;
+      line-height: normal;
+      letter-spacing: -0.54px;
+    }
   }
