--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,13 @@
-.header {
-    width: 100%;
-    height: 765px;
-    background-image: url(../resources/portfolio-bg1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
+ .header {
+   display: block;
+   box-shadow: 0 5px 25px rgba(255, 255, 255, 0.6);
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.9);
+   border-radius: 15px;
+   z-index: 2;
   }
 
   .header__inner {
@@ -14,13 +17,10 @@
   }
 
   .logo {
-    margin-top: 27px;
+    padding: 9px 18px;
     font-weight: 700;
     font-size: 43px;
     letter-spacing: -0.11em;
-    background: #000000;
-    padding: 9px 18px;
-    border-radius: 45px;
     text-decoration: none;
     color: #00f6ff;
   }
@@ -31,7 +31,7 @@
   }
 
   .nav-link {
-    margin-top: 33px;
+    padding: 5px 10px;
     font-size: 18px;
     line-height: 23px;
     text-transform: uppercase;
@@ -46,28 +46,18 @@
 
   @media (max-width: 1199px) {
 
-  .nav {
-  display: none;
-  }
+    .nav {
+      display: none;
+      }
 
     .logo {
-      margin-top: 23px;
       font-size: 30px;
       }
   }
 
 
   @media (max-width: 767px) {
-    .header {
-      height: 716px;
-      background-image: url(../resources/portfolio-bg1.png);
-      background-size: cover;
-      background-position: center;
-      object-fit: contain;
-    }
-
     .logo {
-      margin-top: 23px;
       font-size: 25px;
     }
   }
