--- a/styles/projects.css
+++ b/styles/projects.css
@@ -15,8 +15,6 @@
     width: 100%;
     height: 550px;
     border-radius: 24px;
-    background-repeat: no-repeat;
-    background-size: cover;
   }
 
   .project__text {
@@ -35,7 +33,6 @@
     left: 50px;
     bottom: 94px;
     font-size: 35px;
-    line-height: 46px;
     color: #ffffff;
   }
 
@@ -44,19 +41,17 @@
     left: 50px;
     bottom: 50px;
     font-size: 30px;
-    line-height: 39px;
     color: #ffffff;
   }
 
   .project-btn {
-    padding-top: 56px;
+    padding: 56px 85px;
     display: block;
     width: 582px;
     height: 153px;
     background: #00f6ff;
-    border-radius: 10px;
+    border-radius: 20px;
     font-size: 30px;
-    line-height: 39px;
     text-align: center;
     text-decoration: none;
     color: #000000;
@@ -104,7 +99,7 @@
     }
 
     .project-btn {
-      padding-top: 46px;
+      padding: 46px 67px;
       width: 460px;
       height: 124px;
       border-radius: 8px;
@@ -140,11 +135,9 @@
     }
 
     .project-btn {
-      padding-top: 28px;
+      padding: 28px 51px;
       width: 100%;
       height: 80px;
       font-size: 18px;
-      line-height: normal;
-      letter-spacing: -0.54px;
     }
   }
