--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,23 +1,25 @@
-.contacts {
+  .contacts {
     height: 717px;
-    background-image: url(../resources/contacts-image.png);
-    background-repeat: no-repeat;
-    background-position: right;
-    background-color: #191c19;
+    display: flex;
+    justify-content: space-between;
     border-radius: 30px;
+    background-color: #191c19;
+    background-image: url(/resources/contacts-image.png);
+    background-repeat: no-repeat;
+    background-position: 120%;
+    background-size: auto;
+  }
+
+  .contacts-wrapper {
+    display: flex;
+    flex-direction: column;
+    row-gap: 60px;
   }
 
   .contacts__title {
-    padding-top: 100px;
     width: 553px;
-    color: #fff;
     font-size: 60px;
     line-height: 60px;
-    letter-spacing: -1.8px;
-  }
-
-  .contacts__input {
-    margin: 60px 0 60px 0;
   }
 
   .input {
@@ -29,7 +31,6 @@
     border: none;
     border-radius: 1000px;
     background: #3B3D3B;
-    text-align: left;
     font-size: 22px;
     color: #FFF;
   }
@@ -49,26 +50,23 @@
 
   @media (max-width: 1199px) {
     .contacts {
-      margin-top: 110px;
       background-image: url(../resources/contacts-image_tablet.png);
       height: 484px;
     }
 
+    .contacts-wrapper {
+      row-gap: 40px;
+    }
+
     .contacts__title {
-      padding-top: 50px;
       width: 346px;
       font-size: 40px;
       line-height: normal;
-      letter-spacing: -1.2px;
-    }
-
-    .contacts__input {
-      margin: 40px 0 40px 0;
     }
 
     .input {
       margin-bottom: 17px;
-      width: 383px;
+      width: 450px;
       height: 41px;
       border-radius: 675px;
       font-size: 16px;
@@ -85,6 +83,14 @@
   @media (max-width: 767px) {
     .contacts {
       background-image: none;
+      border-radius: 0;
+    }
 
+    .input {
+      width: 95%;
+    }
+
+    .contacts__btn {
+      width: 100%;
     }
   }
