--- a/styles/projects.css
+++ b/styles/projects.css
@@ -26,6 +26,7 @@
     border-radius: 100px;
     color: #000;
     font-size: 20px;
+    box-shadow: 0 5px 25px rgba(255, 255, 255, 0.6);
   }
 
   .project__title {
