--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     border-radius: 30px;
     background-color: #191c19;
-    background-image: url(/resources/contacts-image.png);
+    background-image: url(../resources/contacts-image.png);
     background-repeat: no-repeat;
     background-position: 120%;
     background-size: auto;
