--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
  .header {
    display: block;
    box-shadow: 0 5px 25px rgba(255, 255, 255, 0.6);
-   position: fixed;
+   position: sticky;
    top: 0;
    left: 0;
    width: 100%;
