--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -6,18 +6,19 @@
     background-color: #191c19;
     background-image: url(../resources/contacts-image.png);
     background-repeat: no-repeat;
-    background-position: 120%;
-    background-size: auto;
+    background-position: 130%;
+    background-size: contain;
   }
 
   .contacts-wrapper {
+    width: 50%;
     display: flex;
     flex-direction: column;
     row-gap: 60px;
   }
 
   .contacts__title {
-    width: 553px;
+    max-width: 553px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -25,7 +26,6 @@
   .input {
     margin-bottom: 26px;
     padding-left: 20px;
-    display: block;
     width: 567px;
     height: 60px;
     border: none;
@@ -66,14 +66,14 @@
 
     .input {
       margin-bottom: 17px;
-      width: 450px;
+      width: 100%;
       height: 41px;
       border-radius: 675px;
       font-size: 16px;
     }
 
     .contacts__btn {
-      width: 304px;
+      width: 100%;
       height: 47px;
       border-radius: 7px;
       font-size: 16px;
@@ -86,11 +86,7 @@
       border-radius: 0;
     }
 
-    .input {
-      width: 95%;
-    }
-
-    .contacts__btn {
-      width: 100%;
+    .contacts-wrapper {
+      width: 80%;
     }
   }
