--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,4 +1,4 @@
-.footer {
+footer {
     padding: 76px 0 34px 0;
     margin-top: 10px;
     border-radius: 30px 30px 0px 0px;
@@ -44,7 +44,7 @@
   }
 
   @media (max-width: 1199px) {
-    .footer {
+    footer {
       padding: 47px 0 34px 0;
       margin-top: 7px;
       border-radius: 30px 30px 0 0;
@@ -68,7 +68,7 @@
   }
 
   @media (max-width: 767px) {
-    .footer {
+    footer {
       margin-top: 0;
       border-radius: 0;
     }
