--- a/styles/services.css
+++ b/styles/services.css
@@ -1,6 +1,5 @@
 .services__title {
     margin-bottom: 74px;
-    width: 403px;
     font-size: 35px;
     line-height: 46px;
 
@@ -17,6 +16,7 @@
     height: auto;
     display: flex;
     justify-content: space-between;
+    gap: 40px;
     background-color: #191c19;
     border-radius: 30px;
   }
