--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,7 +1,7 @@
 .about-me {
   width: 100%;
   height: 765px;
-  background-image: url(../resources/portfolio-bg1.png);
+  background-image: url(../resources/portfolio-bg.png);
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -36,7 +36,7 @@
     @media (max-width: 767px) {
       .about-me {
         height: 716px;
-        background-image: url(../resources/portfolio-bg1.png);
+        background-image: url(../resources/portfolio-bg_mobile.png);
         object-fit: contain;
       }
 
