--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -48,8 +48,8 @@
   }
 
   .contacts__btn:hover {
-    background-color:#FFF;
-    transition: 0.7s;
+    background-color:#00bec4;
+    transition: 0.6s;
   }
 
 
