--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@ footer {
     background-color: #ffffff;
   }
 
-  .footer__inner {
+  .footer__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -73,7 +73,7 @@ footer {
       border-radius: 0;
     }
 
-    .footer__inner {
+    .footer__wrapper {
       margin-bottom: 40px;
       flex-direction: column;
       align-items: flex-start;
