--- a/styles/about.css
+++ b/styles/about.css
@@ -1,4 +1,4 @@
-.about-me {
+.about {
   width: 100%;
   height: 765px;
   background-image: url(../resources/portfolio-bg.png);
@@ -8,7 +8,7 @@
   border-radius: 15px;
 }
 
-.about-me__description {
+.about__description {
     position: absolute;
     top: 334px;
     max-width: 430px;
@@ -18,7 +18,7 @@
     text-shadow: #000 9px 0 5px;
   }
 
-  .about-me__title {
+  .about__title {
     position: absolute;
     top: 466px;
     max-width: 919px;
@@ -28,25 +28,25 @@
   }
 
   @media (max-width: 1199px) {
-    .about-me__title {
+    .about__title {
       font-size: 60px;
     }
     }
 
     @media (max-width: 767px) {
-      .about-me {
+      .about {
         height: 716px;
         background-image: url(../resources/portfolio-bg_mobile.png);
         object-fit: contain;
       }
 
-      .about-me__title {
+      .about__title {
         top: 451px;
         font-size: 40px;
         line-height: 47px;
       }
 
-      .about-me__description {
+      .about__description {
         top: 355px;
         font-size: 15px;
         line-height: 22px;
