--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @import url(../styles/header.css);
 @import url(../styles/burger.css);
-@import url(../styles/about-me.css);
+@import url(../styles/about.css);
 @import url(../styles/projects.css);
 @import url(../styles/competencies.css);
 @import url(../styles/services.css);
